--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "sass": "^1.83.0",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
